--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@ a {
 <h1>最新消息</h1>
 
 <ul>
-<li>114年健康講座系列活動開放報名</li>
+<li>臺南市115年度糖尿病患眼底檢查之醫療院所</li>
 <li>成人健康檢查服務持續辦理中</li>
 <li>社區癌症篩檢巡迴場次公告</li>
 </ul>
@@ -44,3 +44,4 @@ a {
 
 </body>
 </html>
+
