--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@ body {
     <h2>最新消息</h2>
     <div class="news-box">
         <ul>
-            <li>臺南市115年度糖尿病患眼底檢查之醫療院所</li>
+            <li>
+                <a href="diabetes_eye.html">
+                臺南市115年度糖尿病患眼底檢查之醫療院所
+                </a>    
+            </li>
             <li>免費成人健康檢查服務持續辦理中</li>
             <li>社區癌症篩檢巡迴場次公告</li>
         </ul>
@@ -198,4 +202,5 @@ body {
 
 </body>
 </html>
+
 
