--- a/diabetes_eye.html
+++ b/diabetes_eye.html
@@ -81,9 +81,9 @@ body {
 <body>
 
 <div class="header">
-    <h1>臺南市糖尿病眼底檢查醫療院所</h1>
-    <div class="search-box">
-        <input type="text" id="searchInput" placeholder="搜尋院所或行政區..." onkeyup="searchClinic()">
+    <div>
+        <h1>臺南市糖尿病眼底檢查醫療院所</h1>
+        <a href="index.html" style="color:#1fa2ff; font-size:14px;">← 回首頁</a>
     </div>
 </div>
 
@@ -269,5 +269,6 @@ renderClinics(clinics);
 
 </body>
 </html>
+
 
 
