--- a/diabetes_eye.html
+++ b/diabetes_eye.html
@@ -118,6 +118,7 @@ body {
 </div>
     
 <div class="section">
+    <p id="totalCount" style="color:#ccc; margin-bottom:10px;"></p>
     <div class="card-container" id="clinicList"></div>
 </div>
 
@@ -335,6 +336,7 @@ renderClinics(clinics);
 
 </body>
 </html>
+
 
 
 
