--- a/diabetes_eye.html
+++ b/diabetes_eye.html
@@ -203,6 +203,7 @@ const clinics = [
 {district:"東區", name:"林一宏眼科診所", address:"臺南市東區裕農路583號", method:"散瞳"},
 {district:"東區", name:"張明木眼科診所", address:"臺南市東區東門路二段372號", method:"散瞳"},
 {district:"東區", name:"慶明眼科診所", address:"臺南市東區林森路一段377號", method:"免散瞳／散瞳"},
+{district:"東區", name:"台南澄清眼科診所", address:"臺南市東區長榮路二段300號1-3F", method:"散瞳"},
 {district:"東區", name:"王孟文眼科診所", address:"臺南市東區崇明路298號", method:"散瞳"},
 {district:"東區", name:"冠安內科診所", address:"臺南市東區長榮路一段182號", method:"免散瞳"},
 {district:"東區", name:"尚儒大學眼科診所", address:"臺南市東區長榮路二段75號", method:"免散瞳／散瞳"},
@@ -348,6 +349,7 @@ renderClinics(clinics);
 
 </body>
 </html>
+
 
 
 
